<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.project.unibibliotek.MainActivity"
    tools:ignore="MergeRootFrame" >

    <ImageView
        android:id="@+id/DescriptionBookImageView"
        android:layout_width="214dp"
        android:layout_height="0dp"
        android:contentDescription="@string/intro_screen_logo1_description"
        android:layout_weight="0.55"
        android:src="@drawable/lub_logo_with_text" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.05"
        android:text="@string/intro_screen_button_title"
        android:onClick="pushSearchView" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="448dp"
        android:layout_height="0dp"
        android:layout_weight="0.40"
        android:contentDescription="@string/intro_screen_logo2_description"
        android:paddingBottom="20dp"
        android:paddingTop="10dp"
        android:src="@drawable/lub_library_logo" />

</LinearLayout>

